--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: monitor
-          image: joaovtw/monitor:latest
+          image: anttonyvs/monitor:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
