--- a/k8s/monitoramento-deployment.yaml
+++ b/k8s/monitoramento-deployment.yaml
@@ -14,10 +14,13 @@ spec:
     spec:
       containers:
         - name: monitoramento
-          image: anttonyvs/monitor:latest   # Altere se precisar de uma tag diferente
+          image: anttonys/monitor:latest   # Altere se precisar de uma tag diferente
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000   # A porta em que o serviço estará ouvindo
+      # Caso a imagem seja privada, adicione a configuração de pull secret
+      imagePullSecrets:
+          name: my-registry-secret1
 ---
 apiVersion: v1
 kind: Service
